Object class and Stream API java 8 questions